# ai-employ

./: .env.example  .gitignore  CLAUDE.md  GEMINI.md  README.md  Taskfile.yml  docker-compose.yml  ecosystem.config.js  hackathon_content.txt  main.py  package.json  pyproject.toml
.specify/memory/: constitution.md
AI_Employee_Vault/.obsidian/: workspace.json
AI_Employee_Vault/Pending_Approval/: APPROVE_REPLY_EMAIL_19d2d2a1_20260327024513.md  APPROVE_REPLY_WHATSAPP_2026-03-27_07-43.md  APPROVE_REPLY_WHATSAPP_2026-03-27_08-00.md  APPROVE_REPLY_WHATSAPP_2026-03-27_09-00.md  APPROVE_REPLY_WHATSAPP_2026-03-27_10-00.md
BronzeTier/: ecosystem.config.js
BronzeTier/scripts/: init_vault.py
Core/scripts/: orchestrator.py
PlatinumTier/deploy/: backup.sh  docker-compose.yml  ecosystem.cloud.config.js  ecosystem.local.config.js  vault-init.sh
PlatinumTier/scripts/: audit_log.py  cloud_agent.py  exceptions.py  health_writer.py  linkedin_rate_limiter.py  linkedin_scheduler.py  local_agent.py  odoo_client.py  stale_reaper.py  task_manager.py  vault_sync.py
PlatinumTier/tests/: drop_task.py  run_local_test.py  setup_test_vault.py
ai/memory/: context.md
ai/prompts/: implement.prompt.md  plan.prompt.md  spec.prompt.md  tasks.prompt.md
docs/: cloud-vm-deployment-guide.md
specs/001-initialize-obsidian-vault/: plan.md  spec.md  tasks.md
specs/002-silver-tier-functional/: plan.md  spec.md  tasks.md
specs/003-gold-tier-autonomous/: plan.md  spec.md  tasks.md
specs/004-platinum-cloud-local/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+64 files in other folders)
